# lighthouse

./: .env.example  .gitignore  AGENTS.md  README.md  dev.sh  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_progress_log.py  0003_scan_device_count.py  0004_scan_progress_pct.py
backend/app/: config.py  main.py
backend/app/api/: alerts.py  devices.py  ports.py  scans.py  schemas.py  settings.py  stats.py
backend/app/core/: auth.py  differ.py  scanner.py  scheduler.py
backend/app/db/: models.py  seed.py  session.py
backend/tests/: conftest.py  test_config_dev_dx.py  test_scanner_and_api.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AlertRow.tsx  DeviceTable.tsx  PortBadge.tsx  ProgressBar.tsx  QueryError.tsx  ScanForm.tsx  StatCard.tsx
frontend/src/lib/: time.ts
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  DeviceDetail.tsx  Devices.tsx  Scans.tsx  Settings.tsx
